--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@sanity/client": "^3.3.0",
-    "@sanity/image-url": "^1.0.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.47.1",
     "@stripe/stripe-js": "^1.29.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.2",
@@ -43,8 +44,10 @@
     "react-star-rating-component": "^1.4.1",
     "react-toastify": "^9.0.7",
     "react-transition-group": "^4.4.2",
+    "sanity": "^3.47.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^9.1.0",
+    "styled-components": "^6.1.11",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
