--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@reduxjs/toolkit": "^1.8.2",
-    "@sanity/client": "^3.3.0",
+    "@sanity/client": "^2.11.0",
+    "next-sanity-image": "^3.2.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.47.1",
     "@stripe/stripe-js": "^1.29.0",
@@ -30,12 +31,11 @@
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "next-connect": "^0.12.2",
-    "next-sanity-image": "^3.2.1",
     "next-sitemap": "^3.1.17",
     "next-themes": "^0.2.0",
     "nextjs-progressbar": "^0.0.14",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.38.1",
